# serverless-builder

./: .bumpversion.cfg  .flake8  .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  pr-labeler.yml
.github/workflows/: publish.yml  python-publish.yml  release.yml
advanced/: index.html
ci/: index.html
concept/: index.html
docs/: advanced.md  ci.md  concept.md  getting_started.md  index.md  integrations.md  plugins.md  usage.md
docs/features/: encryption.md  plugins.md
docs/integrations/: power_tools.md  sentry.md  step_functions.md
docs/resources/: functions.md
features/encryption/: index.html
features/plugins/: index.html
getting_started/: index.html
integrations/power_tools/: index.html
integrations/sentry/: index.html
integrations/step_functions/: index.html
integrations/troposphere/: index.html
resources/api_gateway/: index.html
resources/dynamodb/: index.html
resources/event_bridge/: index.html
resources/functions/: index.html
resources/iam/: index.html
resources/other/: index.html
search/: search_index.json
serverless/: __init__.py  cli.py  plugins.py  provider.py
serverless/aws/: auth.py  provider.py  types.py
serverless/aws/features/: __init__.py  api_handler.py  api_keys.py  encryption.py  event_dispatcher.py  stepfunctions.py  xray.py
serverless/aws/functions/: appsync.py  dynamodb.py  event_bridge.py  generic.py  http.py  kinesis.py  s3.py  sqs.py  websocket.py
serverless/aws/iam/: __init__.py  apigw.py  dynamodb.py  event_bridge.py  kinesis.py  redshift.py  secrets_manager.py  sqs.py  xray.py
serverless/aws/resources/: __init__.py  dynamodb.py  functions.py  iam.py  kinesis.py  kms.py  logs.py  s3.py  sqs.py
serverless/integration/: __init__.py  event_dispatcher.py  powertools.py  sentry.py
serverless/service/: __init__.py  configuration.py  custom.py  environment.py  functions.py  package.py  resources.py  types.py
serverless/service/plugins/: __init__.py  code_sign.py  composed_vars.py  concurrency.py  deployment_bucket.py  domain_manager.py  dynamodb.py  export_env.py  generic.py  iam_roles.py  kms.py  lambda_dlq.py  localstack.py  prune.py  python_requirements.py  (+4 more)
serverless/static/: config.js
(+4 files in other folders)
