[tool.poetry]
name = "serverless-builder"
version = "0.1.0"
description = ""
keywords = ["library"]
authors = ["Epsy <engineering@epsyhealth.com>"]

packages = [
    { include = "serverless" }
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
troposphere = "~3.2"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
black = "^21.12b0"
isort = "^5.10.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
