[tool.poetry]
name = "serverless-builder"
version = "1.1.0"
description = "Python interface to easily generate `serverless.yml`."
keywords = ["library", "serverless"]
authors = ["Epsy <engineering@epsyhealth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/epsylabs/serverless-builder"
repository = "https://github.com/epsylabs/serverless-builder"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]

packages = [
    { include = "serverless" }
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
troposphere = "~3.2"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "~6.2"
black = "^21.12b0"
isort = "^5.10.1"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
